--- a/html.html
+++ b/html.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <title>
-        Fintrak
+        Fintrak page
     </title>
     <link href='css.css' rel='stylesheet'></html>
     </head>
