I changed our text

--- a/html.html
+++ b/html.html
@@ -55,7 +55,7 @@
             </div>
             <div class='grp' id='line3'>
                 <h1>What We Do Best</h1>
-                <h4>We customize each of the applications to match client expectations.</h4>
+                <h4>We customize each of the applications to surpass our client expectations</h4>
             </div>
             <div class='grp' id='line4'>
                 <ul class='list-grp'>
