line 36 was changed

--- a/html.html
+++ b/html.html
@@ -33,7 +33,7 @@
             </div>
             <div class='grp' id='line2'>
                 <div class='sub-group' id='innerbox1-line2'>
-                    <h1>Who We Are</h1>
+                    <h1>Who We Are In Fintrak Software</h1>
                     <h3>We are a global Financial Technology organization providing innovative 
                         technology and business solutions to financial institutions in the 
                         financial services sector and enterprises across continents.
