Line 48 was Changed

--- a/html.html
+++ b/html.html
@@ -45,7 +45,7 @@
                              required to enable them surpass their stakeholders’ 
                              expectations.  
                         </p> 
-                         <p class='sub'>Support & Customization is our DNA.</p>                  
+                         <p class='sub'>Support & Customization is in our DNA.</p>                  
                     </h3>
                     <button class='btn' id='btn2' form-action=""><span class='text'>Learn More</span></button>
                 </div>
