i changed a different thing

--- a/html.html
+++ b/html.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class='grp' id='line3'>
-                <h1>What We Do Best</h1>
+                <h1>What We know how to Do Best</h1>
                 <h4>We customize each of our applications to match client expectations and beyond.</h4>
             </div>
             <div class='grp' id='line4'>
