--- a/html.html
+++ b/html.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class='sub-group' id='innerbox2-line1'>
-                    <h1>We develop innovative financial solutions </h1>
+                    <h1>We develop innovative financial solutions and wonderful applications </h1>
                     <h4>Bespoke solutions to improve the lives of organisations in need</h4>
                     <button class='btn' id='btn1' form-action=""><span class='text'>Contact Us</span></button>
                 </div>
