--- a/html.html
+++ b/html.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class='sub-group' id='innerbox2-line1'>
-                    <h1>We develop innovative financial solutions and wonderful applications </h1>
+                    <h1>We develop innovative financial solutions </h1>
                     <h4>Bespoke solutions to improve the lives of organisations in need</h4>
                     <button class='btn' id='btn1' form-action=""><span class='text'>Contact Us</span></button>
                 </div>
@@ -37,7 +37,7 @@
                     <h3>We are a global Financial Technology organization providing innovative 
                         technology and business solutions to financial institutions in the 
                         financial services sector and enterprises across continents.
-                        <p class='sub'>With business offices in Nigeria, Ghana and Gambia and an army of 
+                        <p class='sub'>With business offices in Nigeria, Cameroon Ghana and Gambia and an army of 
                             software engineers and professionals with competencies across banking,
                              finance, audit, consulting and software development, 
                              FinTrak Software is on a mission to support organizations 
@@ -54,8 +54,8 @@
                 </div>
             </div>
             <div class='grp' id='line3'>
-                <h1>What We know how to Do Best</h1>
-                <h4>We customize each of our applications to match client expectations and beyond.</h4>
+                <h1>What We Do Best</h1>
+                <h4>We customize each of the applications to match client expectations.</h4>
             </div>
             <div class='grp' id='line4'>
                 <ul class='list-grp'>
