--- a/html.html
+++ b/html.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class='sub-group' id='innerbox2-line1'>
                     <h1>We develop innovative financial solutions </h1>
-                    <h4>Bespoke solutions to improve the lives of organisations in need</h4>
+                    <h4>Bespoke solutions to improve the lives of organisations, Offices in need</h4>
                     <button class='btn' id='btn1' form-action=""><span class='text'>Contact Us</span></button>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                     <h3>We are a global Financial Technology organization providing innovative 
                         technology and business solutions to financial institutions in the 
                         financial services sector and enterprises across continents.
-                        <p class='sub'>With business offices in Nigeria, Cameroon Ghana and Gambia and an army of 
+                        <p class='sub'>With business offices in Nigeria, Ghana and Gambia and an army of 
                             software engineers and professionals with competencies across banking,
                              finance, audit, consulting and software development, 
                              FinTrak Software is on a mission to support organizations 
